--- a/bootstrap/helmfile.yaml
+++ b/bootstrap/helmfile.yaml
@@ -36,7 +36,7 @@ releases:
     atomic: true
     chart: cilium/cilium
     version: 1.17.1
-    values: ["../kubernetes/apps/kube-system/cilium/app/helm/values.yaml"]
+    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/cilium/app/helm/values.yaml']
     hooks:
       - # Wait for cilium CRDs to be available.
         events: ['postsync']
@@ -53,7 +53,7 @@ releases:
           - --namespace=kube-system
           - --server-side
           - --field-manager=kustomize-controller
-          - --filename=../kubernetes/apps/kube-system/cilium/app/networks.yaml
+          - --filename={{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/cilium/app/networks.yaml
         showlogs: true
 
   - name: coredns
@@ -61,31 +61,31 @@ releases:
     atomic: true
     chart: coredns/coredns
     version: 1.39.1
-    values: ["../kubernetes/apps/kube-system/coredns/app/helm/values.yaml"]
-    needs: ["kube-system/cilium"]
+    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/coredns/app/helm/values.yaml']
+    needs: ['kube-system/cilium']
 
   - name: spegel
     namespace: kube-system
     atomic: true
     chart: spegel/spegel
     version: v0.0.30
-    values: ["../kubernetes/apps/kube-system/spegel/app/helm/values.yaml"]
-    needs: ["kube-system/coredns"]
+    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/kube-system/spegel/app/helm/values.yaml']
+    needs: ['kube-system/coredns']
 
   - name: cert-manager
     namespace: security
     atomic: true
     chart: jetstack/cert-manager
     version: v1.17.1
-    values: ["../kubernetes/apps/security/cert-manager/app/helm/values.yaml"]
-    needs: ["kube-system/spegel"]
+    values: ['{{ requiredEnv "ROOT_DIR" }}kubernetes/apps/security/cert-manager/app/helm/values.yaml']
+    needs: ['kube-system/spegel']
 
   - name: external-secrets
     namespace: security
     atomic: true
     chart: external-secrets/external-secrets
     version: 0.14.4
-    values: ["../kubernetes/apps/security/external-secrets/app/helm/values.yaml"]
+    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/security/external-secrets/app/helm/values.yaml']
     hooks:
       - # Wait for external-secrets CRDs to be available.
         events: ['postsync']
@@ -102,22 +102,22 @@ releases:
           - --namespace=external-secrets
           - --server-side
           - --field-manager=kustomize-controller
-          - --filename=../kubernetes/apps/security/onepassword/app/clustersecretstore.yaml
+          - --filename={{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/security/onepassword/app/clustersecretstore.yaml
         showlogs: true
-    needs: ["security/cert-manager"]
+    needs: ['security/cert-manager']
 
   - name: flux-operator
     namespace: flux-system
     atomic: true
     chart: controlplaneio/flux-operator
     version: 0.17.0
-    values: ["../kubernetes/apps/flux-system/flux-operator/app/helm/values.yaml"]
-    needs: ["security/external-secrets"]
+    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/flux-system/flux-operator/app/helm/values.yaml']
+    needs: ['security/external-secrets']
 
   - name: flux-instance
     namespace: flux-system
     atomic: true
     chart: controlplaneio/flux-instance
     version: 0.17.0
-    values: ["../kubernetes/apps/flux-system/flux-operator/instance/helm/values.yaml"]
-    needs: ["flux-system/flux-operator"]
+    values: ['{{ requiredEnv "ROOT_DIR" }}/kubernetes/apps/flux-system/flux-operator/instance/helm/values.yaml']
+    needs: ['flux-system/flux-operator']
