--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -26,20 +26,23 @@ spec:
               name: sops-age
           postBuild:
             substituteFrom:
-              - kind: ConfigMap
-                name: cluster-settings
-              - kind: Secret
-                name: cluster-secrets
+              - name: cluster-secrets
+                kind: Secret
+                optional: false
+              - name: cluster-settings
+                kind: ConfigMap
+                optional: true
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
-        labelSelector: substitution.flux.home.arpa/disabled notin (true)
   postBuild:
     substituteFrom:
-      - name: cluster-settings
-        kind: ConfigMap
       - name: cluster-secrets
         kind: Secret
+        optional: false
+      - name: cluster-settings
+        kind: ConfigMap
+        optional: true
   prune: true
   retryInterval: 2m
   sourceRef:
