--- a/kubernetes/apps/security/cert-manager/ks.yaml
+++ b/kubernetes/apps/security/cert-manager/ks.yaml
@@ -33,35 +33,35 @@ spec:
   targetNamespace: *namespace
   timeout: 5m
   wait: true
-# ---
-# # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: &app cert-manager-certificates
-#   namespace: &namespace security
-# spec:
-#   commonMetadata:
-#     labels:
-#       app.kubernetes.io/name: *app
-#   dependsOn:
-#     - name: cert-manager
-#       namespace: security
-#     - name: onepassword
-#       namespace: security
-#   healthCheckExprs:
-#     - apiVersion: cert-manager.io/v1
-#       kind: Certificate
-#       failed: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'False')
-#       current: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'True')
-#   interval: 1h
-#   path: ./kubernetes/apps/security/cert-manager/certificates
-#   prune: true
-#   retryInterval: 2m
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
-#     namespace: flux-system
-#   targetNamespace: *namespace
-#   timeout: 15m
-#   wait: true
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app cert-manager-certificates
+  namespace: &namespace security
+spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  dependsOn:
+    - name: cert-manager
+      namespace: security
+    - name: onepassword
+      namespace: security
+  healthCheckExprs:
+    - apiVersion: cert-manager.io/v1
+      kind: Certificate
+      failed: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'False')
+      current: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'True')
+  interval: 1h
+  path: ./kubernetes/apps/security/cert-manager/certificates
+  prune: true
+  retryInterval: 2m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: *namespace
+  timeout: 15m
+  wait: true
