--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -6,13 +6,13 @@ namespace: observability
 components:
   - ../../components/common
   - ../../components/repos
-resources: []
+resources:
   # Flux-Kustomizations
   # - ./exporters
   # - ./gatus/ks.yaml
   # - ./grafana/ks.yaml
   # - ./kube-prometheus-stack/ks.yaml
-  # - ./kubernetes-dashboard/ks.yaml
+  - ./kubernetes-dashboard/ks.yaml
   # - ./loki/ks.yaml
   # - ./promtail/ks.yaml
   # - ./silence-operator/ks.yaml
