--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -9,9 +9,9 @@ components:
 resources:
   # Flux-Kustomizations
   # - ./exporters
-  # - ./gatus/ks.yaml
+  - ./gatus/ks.yaml
   # - ./grafana/ks.yaml
-  # - ./kube-prometheus-stack/ks.yaml
+  - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
   # - ./loki/ks.yaml
   # - ./promtail/ks.yaml
