--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -10,5 +10,5 @@ resources:
   # Flux-Kustomizations
   - ./cloudnative-pg/ks.yaml
   - ./dragonfly/ks.yaml
-  # - ./pgadmin/ks.yaml
-  # - ./postgres-backup/ks.yaml
+  - ./pgadmin/ks.yaml
+  - ./postgres-backup/ks.yaml
