--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   # Flux-Kustomizations
   - ./dokuwiki/ks.yaml
   - ./hoarder/ks.yaml
-  # - ./immich/ks.yaml
-  # - ./immich-folder-album-creator/ks.yaml
+  - ./immich/ks.yaml
+  - ./immich-folder-album-creator/ks.yaml
   # - ./nextcloud/ks.yaml
   - ./searxng/ks.yaml
