--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
   # Flux-Kustomizations
   - ./flaresolverr/ks.yaml
   - ./pinchflat/ks.yaml
-  - ./qbittorrent/ks.yaml
+  # - ./qbittorrent/ks.yaml
