--- a/kubernetes/apps/actions-runner-system/kustomization.yaml
+++ b/kubernetes/apps/actions-runner-system/kustomization.yaml
@@ -5,6 +5,6 @@ kind: Kustomization
 namespace: actions-runner-system
 components:
   - ../../components/common
-resources: []
+resources:
   # Flux-Kustomizations
-  # - ./actions-runner-controller/ks.yaml
+  - ./actions-runner-controller/ks.yaml
