fix(arc): modify secret name

--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/home-ops/externalsecret.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/home-ops/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: &name home-ops-runner
+  name: home-ops-runner
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: home-ops-runner-secret
     template:
       data:
         github_app_id: '{{ .ACTIONS_RUNNER_APP_ID }}'
