Revert "fix(democratic-csi): detach volumes from snaps and vols"
This reverts commit 466a74e7b453ef3214fc2d91bbfa5c8ae961e36f.

--- a/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
@@ -77,8 +77,8 @@ spec:
         allowVolumeExpansion: true
         parameters:
           fsType: ext4
-          detachedVolumesFromSnapshots: true
-          detachedVolumesFromVolumes: true
+          detachedVolumesFromSnapshots: false
+          detachedVolumesFromVolumes: false
         mountOptions: []
         secrets:
           provisioner-secret:
