--- a/kubernetes/apps/storage/democratic-csi/ks.yaml
+++ b/kubernetes/apps/storage/democratic-csi/ks.yaml
@@ -3,6 +3,33 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: &app democratic-csi-iscsi-test
+  namespace: &namespace storage
+spec:
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  dependsOn:
+    - name: onepassword
+      namespace: security
+    - name: snapshot-controller
+      namespace: storage
+  interval: 1h
+  path: ./kubernetes/apps/storage/democratic-csi/iscsi-test
+  prune: true
+  retryInterval: 2m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: *namespace
+  timeout: 5m
+  wait: false
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: &app democratic-csi-iscsi
   namespace: &namespace storage
 spec:
