chore(democratic-csi): testing modified csi configuration

--- a/kubernetes/apps/storage/democratic-csi/iscsi-test/externalsecret.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi-test/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       data:
         driver-config-file.yaml: |
-          driver: freenas-api-iscsi-test
+          driver: freenas-api-iscsi
           httpConnection:
             protocol: https
             host: nas.${SECRET_DOMAIN}
