--- a/kubernetes/apps/storage/democratic-csi/iscsi-test/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi-test/helmrelease.yaml
@@ -71,7 +71,7 @@ spec:
       name: org.democratic-csi.iscsi-test
     storageClasses:
       - name: truenas-ssd-iscsi-test
-        defaultClass: true
+        defaultClass: false
         reclaimPolicy: Delete
         volumeBindingMode: Immediate
         allowVolumeExpansion: true
