fix(ci): pin dependencies, rename workflow and refactor renovate

--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -3,19 +3,20 @@
   "extends": [
     "config:recommended",
     "docker:enableMajor",
-    ":automergeBranch",
-    ":disableRateLimiting",
-    ":dependencyDashboard",
-    ":gitSignOff",
-    ":semanticCommits",
-    ":timezone(Europe/Stockholm)",
+    "helpers:pinGitHubActionDigests",
     "github>pwyde/home-ops//.renovate/autoMerge.json5",
     "github>pwyde/home-ops//.renovate/customManagers.json5",
     "github>pwyde/home-ops//.renovate/grafanaDashboards.json5",
     "github>pwyde/home-ops//.renovate/groups.json5",
     "github>pwyde/home-ops//.renovate/labels.json5",
     "github>pwyde/home-ops//.renovate/packageRules.json5",
-    "github>pwyde/home-ops//.renovate/semanticCommits.json5"
+    "github>pwyde/home-ops//.renovate/semanticCommits.json5",
+    ":automergeBranch",
+    ":disableRateLimiting",
+    ":dependencyDashboard",
+    ":gitSignOff",
+    ":semanticCommits",
+    ":timezone(Europe/Stockholm)"
   ],
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
