--- a/.github/workflows/helm-repo-sync.yaml
+++ b/.github/workflows/helm-repo-sync.yaml
@@ -1,6 +1,6 @@
 ---
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
-name: "Helm Repo Sync"
+name: Helm Repo Sync
 
 on:
   pull_request:
@@ -19,11 +19,11 @@ jobs:
       all_changed_and_modified_files: ${{ steps.changed-files.outputs.all_changed_and_modified_files }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
       - name: Get Changed Files
         id: changed-files
-        uses: tj-actions/changed-files@v45
+        uses: tj-actions/changed-files@2f7c5bfce28377bc069a65ba478de0a74aa0ca32 # v46
         with:
           files: kubernetes/**/helmrelease.yaml
 
@@ -36,7 +36,7 @@ jobs:
       repos: ${{ steps.extract.outputs.repos }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
       - name: Extract Repos
         id: extract
