--- a/.renovate/autoMerge.json5
+++ b/.renovate/autoMerge.json5
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "packageRules": [
     {
-      "description": ["Auto-merge container digests updates for trusted containers"],
+      "description": ["Auto-merge trusted container digests"],
       "matchDatasources": ["docker"],
       "automerge": true,
       "automergeType": "branch",
@@ -11,31 +11,31 @@
       "ignoreTests": true
     },
     {
-      "description": ["Auto-merge GitHub Actions"],
-      "matchDatasources": ["github-tags"],
-      "matchManagers": ["github-actions"],
-      "automerge": true,
-      "automergeType": "branch",
-      "matchUpdateTypes": ["minor", "patch", "digest"],
-      "ignoreTests": true
-    },
-    {
-      "description": "Auto-merge GitHub Releases",
-      "matchDatasources": ["github-releases"],
-      "automerge": true,
-      "automergeType": "pr",
-      "matchUpdateTypes": ["minor", "patch"],
-      "matchPackageNames": ["/gateway-api/", "/prometheus-operator/"],
-      "ignoreTests": false
-    },
-    {
-      "description": ["Auto-merge KPS minors and patches"],
+      "description": ["Auto-merge Helm Releases"],
       "matchDatasources": ["helm", "docker"],
       "automerge": true,
       "automergeType": "pr",
       "matchUpdateTypes": ["minor", "patch"],
       "matchPackageNames": ["/kube-prometheus-stack/"],
       "ignoreTests": false
+    },
+    {
+      "description": ["Auto-merge trusted GitHub Actions"],
+      "matchManagers": ["github-actions"],
+      "automerge": true,
+      "automergeType": "branch",
+      "matchUpdateTypes": ["minor", "patch", "digest"],
+      "matchPackageNames": ["/^actions\\//", "/^cloudflare\\//", "/^renovatebot\\//"],
+      "ignoreTests": true
+    },
+    {
+      "description": "Auto-merge GitHub Releases",
+      "matchDatasources": ["github-releases"],
+      "automerge": true,
+      "automergeType": "branch",
+      "matchUpdateTypes": ["minor", "patch"],
+      "matchPackageNames": ["/external-dns/", "/gateway-api/", "/prometheus-operator/"],
+      "ignoreTests": true
     }
   ]
 }
