--- a/kubernetes/apps/self-hosted/nextcloud/ks.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/ks.yaml
@@ -29,10 +29,10 @@ spec:
       APP_GID: *uid
       VOLSYNC_CLAIM: *app
       VOLSYNC_ACCESSMODES: &accessModes ReadWriteOnce
-      VOLSYNC_STORAGECLASS: &storageClass ${CLUSTER_STORAGE_BLOCK}
+      VOLSYNC_STORAGECLASS: &storageClass "truenas-ssd-iscsi-test"
       VOLSYNC_SNAPSHOTCLASS: *storageClass
       VOLSYNC_CACHE_ACCESSMODES: *accessModes
-      VOLSYNC_CACHE_SNAPSHOTCLASS: *storageClass
+      VOLSYNC_CACHE_SNAPSHOTCLASS: "openebs-hostpath"
       VOLSYNC_CAPACITY: &capacity 10Gi
       VOLSYNC_CACHE_CAPACITY: *capacity
       VOLSYNC_TIME: "45 3 * * *"
