--- a/kubernetes/apps/observability/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/loki/app/helmrelease.yaml
@@ -1,14 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: loki
-  namespace: observability # Required for Renovate lookups.
 spec:
   interval: 1h
-  timeout: 3m
-  url: https://grafana.github.io/helm-charts
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 6.28.0
+  url: oci://ghcr.io/onedr0p/charts-mirror/loki
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -17,14 +22,9 @@ metadata:
   name: loki
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: loki
-      version: 6.28.0
-      sourceRef:
-        kind: HelmRepository
-        name: loki
-        namespace: observability
+  chartRef:
+    kind: OCIRepository
+    name: loki
   install:
     crds: Skip
     remediation:
@@ -35,9 +35,6 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  dependsOn:
-    - name: democratic-csi-iscsi
-      namespace: storage
   values:
     deploymentMode: SingleBinary
     loki:
