--- a/kubernetes/apps/observability/loki/ks.yaml
+++ b/kubernetes/apps/observability/loki/ks.yaml
@@ -9,6 +9,9 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: democratic-csi-iscsi
+      namespace: storage
   interval: 1h
   path: ./kubernetes/apps/observability/loki/app
   prune: true
