chore(renovate): use minimumReleaseAge for all github-actions

--- a/.renovate/autoMerge.json5
+++ b/.renovate/autoMerge.json5
@@ -20,12 +20,12 @@
       "ignoreTests": false
     },
     {
-      "description": ["Auto-merge trusted GitHub Actions"],
+      "description": ["Auto-merge GitHub Actions"],
       "matchManagers": ["github-actions"],
       "automerge": true,
       "automergeType": "branch",
       "matchUpdateTypes": ["minor", "patch", "digest"],
-      "matchPackageNames": ["/^actions\\//", "/^cloudflare\\//", "/^renovatebot\\//"],
+      "minimumReleaseAge": "3 days",
       "ignoreTests": true
     },
     {
