--- a/.renovate/groups.json5
+++ b/.renovate/groups.json5
@@ -20,6 +20,15 @@
       }
     },
     {
+      "description": ["Cilium Group"],
+      "groupName": "Cilium",
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["/cilium/"],
+      "group": {
+        "commitMessageTopic": "{{{groupName}}} group"
+      }
+    },
+    {
       "description": ["CoreDNS Group"],
       "groupName": "CoreDNS",
       "matchDatasources": ["docker"],
