--- a/.renovate/groups.json5
+++ b/.renovate/groups.json5
@@ -1,106 +1,97 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "packageRules": [
+  $schema: "https://docs.renovatebot.com/renovate-schema.json",
+  packageRules: [
     {
-      "description": ["1Password Connect Group"],
-      "groupName": "1Password Connnect",
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["/1password/"],
-      "group": {
-        "commitMessageTopic": "{{{groupName}}} group",
+      description: "1Password Connect Group",
+      groupName: "1Password Connnect",
+      matchDatasources: ["docker"],
+      matchPackageNames: ["/1password/"],
+      group: {
+        commitMessageTopic: "{{{groupName}}} group",
       },
     },
     {
-      "description": ["Actions Runner Controller Group"],
-      "groupName": "Actions Runner Controller",
-      "matchDatasources": ["docker", "helm"],
-      "matchPackageNames": ["/gha-runner-scale-set-controller/", "/gha-runner-scale-set/"],
-      "group": {
-        "commitMessageTopic": "{{{groupName}}} group"
-      }
-    },
-    {
-      "description": ["Cert-Manager Group"],
-      "groupName": "Cert-Manager",
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["/cert-manager/"],
-      "group": {
-        "commitMessageTopic": "{{{groupName}}} group"
-      }
-    },
-    {
-      "description": ["Cilium Group"],
-      "groupName": "Cilium",
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["/cilium/"],
-      "group": {
-        "commitMessageTopic": "{{{groupName}}} group"
-      }
-    },
-    {
-      "description": ["CoreDNS Group"],
-      "groupName": "CoreDNS",
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["/coredns/"],
-      "group": {
-        "commitMessageTopic": "{{{groupName}}} group"
-      }
-    },
-    {
-      "description": ["External Secrets Operator Group"],
-      "groupName": "External Secrets Operator",
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["/external-secrets/"],
-      "group": {
-        "commitMessageTopic": "{{{groupName}}} group"
-      }
-    },
-    {
-      "description": ["Flux Operator Group"],
-      "groupName": "Flux Operator",
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["/flux-operator/", "/flux-instance/"],
-      "group": {
-        "commitMessageTopic": "{{{groupName}}} group"
-      }
-    },
-    {
-      "description": ["Immich Group"],
-      "groupName": "Immich",
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["/immich-app/immich-server", "/immich-app/immich-machine-learning"],
-      "group": {
-        "commitMessageTopic": "{{{groupName}}} group"
-      },
-      "separateMinorPatch": true,
-      "sourceUrl": "https://github.com/immich-app/immich"
-    },
-    {
-      "description": "silence-operator image and CRD",
-      "groupName": "silence-operator",
-      "matchDatasources": ["docker", "github-releases"],
-      "matchPackageNames": ["silence-operator", "silence-operator-crds"],
-      "group": {
-        "commitMessageTopic": "{{{groupName}}} group"
+      description: "Actions Runner Controller Group",
+      groupName: "Actions Runner Controller",
+      matchDatasources: ["docker", "helm"],
+      matchPackageNames: ["/gha-runner-scale-set-controller/", "/gha-runner-scale-set/"],
+      group: {
+        commitMessageTopic: "{{{groupName}}} group",
       },
     },
     {
-      "description": ["Spegel Group"],
-      "groupName": "Spegel",
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["/spegel/"],
-      "group": {
-        "commitMessageTopic": "{{{groupName}}} group"
-      }
+      description: "Cert-Manager Group",
+      groupName: "Cert-Manager",
+      matchDatasources: ["docker"],
+      matchPackageNames: ["/cert-manager/"],
+      group: {
+        commitMessageTopic: "{{{groupName}}} group",
+      },
     },
     {
-      "description": ["Talos Group"],
-      "groupName": "Talos",
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["/siderolabs/installer", "/siderolabs/talosctl"],
-      "group": {
-        "commitMessageTopic": "{{{groupName}}} group"
-      }
-    }
-  ]
+      description: "Cilium Group",
+      groupName: "Cilium",
+      matchDatasources: ["docker"],
+      matchPackageNames: ["/cilium/"],
+      group: {
+        commitMessageTopic: "{{{groupName}}} group",
+      },
+    },
+    {
+      description: "CoreDNS Group",
+      groupName: "CoreDNS",
+      matchDatasources: ["docker"],
+      matchPackageNames: ["/coredns/"],
+      group: {
+        commitMessageTopic: "{{{groupName}}} group",
+      },
+    },
+    {
+      description: "External Secrets Operator Group",
+      groupName: "External Secrets Operator",
+      matchDatasources: ["docker"],
+      matchPackageNames: ["/external-secrets/"],
+      group: {
+        commitMessageTopic: "{{{groupName}}} group",
+      },
+    },
+    {
+      description: "Flux Operator Group",
+      groupName: "Flux Operator",
+      matchDatasources: ["docker"],
+      matchPackageNames: ["/flux-operator/", "/flux-instance/"],
+      group: {
+        commitMessageTopic: "{{{groupName}}} group",
+      },
+    },
+    {
+      description: "Immich Group",
+      groupName: "Immich",
+      matchDatasources: ["docker"],
+      matchPackageNames: ["/immich-app/immich-server", "/immich-app/immich-machine-learning"],
+      group: {
+        commitMessageTopic: "{{{groupName}}} group"
+      },
+      separateMinorPatch: true,
+      sourceUrl: "https://github.com/immich-app/immich"
+    },
+    {
+      description: "Spegel Group",
+      groupName: "Spegel",
+      matchDatasources: ["docker"],
+      matchPackageNames: ["/spegel/"],
+      group: {
+        commitMessageTopic: "{{{groupName}}} group",
+      },
+    },
+    {
+      description: "Talos Group",
+      groupName: "Talos",
+      matchDatasources: ["docker"],
+      matchPackageNames: ["/siderolabs/installer", "/siderolabs/talosctl"],
+      group: {
+        commitMessageTopic: "{{{groupName}}} group"
+      },
+    },
+  ],
 }
