chore(kps): modify smartctl PrometheusRule

--- a/kubernetes/apps/observability/kube-prometheus-stack/addons/alerts/smartctl-exporter.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/addons/alerts/smartctl-exporter.yaml
@@ -12,8 +12,8 @@ spec:
           annotations:
             summary: Mounted drive {{ $labels.device }} on device {{ $labels.instance }}
               has a temperature higher than 65°C.
-          expr: smartctl_device_temperature > 65
-          for: 15m
+          expr: smartctl_device_temperature{temperature_type="current"} > 65
+          for: 5m
           labels:
             severity: critical
         - alert: SmartDeviceTestFailed
