--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -6,11 +6,11 @@ on:
   workflow_dispatch:
     inputs:
       dryRun:
-        description: Dry run
+        description: Dry Run
         default: "false"
         required: false
       logLevel:
-        description: Log level
+        description: Log Level
         default: debug
         required: false
       version:
@@ -57,7 +57,7 @@ jobs:
           token: "${{ steps.app-token.outputs.token }}"
 
       - name: Run Renovate
-        uses: renovatebot/github-action@08ed9fa83e24bfe6222557f9e221395c57972127 # v41.0.16
+        uses: renovatebot/github-action@02f4fdeb479bbb229caa7ad82cb5e691c07e80b3 # v41.0.14
         with:
           token: "${{ steps.app-token.outputs.token }}"
           renovate-version: "${{ env.WORKFLOW_RENOVATE_VERSION }}"
