--- a/kubernetes/apps/ai/open-webui/ks.yaml
+++ b/kubernetes/apps/ai/open-webui/ks.yaml
@@ -14,6 +14,10 @@ spec:
   dependsOn:
     - name: ollama
       namespace: ai
+    - name: democratic-csi-iscsi
+      namespace: storage
+    - name: volsync
+      namespace: storage
   interval: 1h
   path: ./kubernetes/apps/ai/open-webui/app
   postBuild:
