--- a/kubernetes/apps/database/cloudnative-pg/ks.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/ks.yaml
@@ -12,6 +12,10 @@ spec:
   dependsOn:
     - name: onepassword
       namespace: security
+    - name: minio
+      namespace: storage
+    - name: democratic-csi-iscsi
+      namespace: storage
   interval: 1h
   path: ./kubernetes/apps/database/cloudnative-pg/app
   prune: true
