--- a/kubernetes/apps/media/audiobookshelf/ks.yaml
+++ b/kubernetes/apps/media/audiobookshelf/ks.yaml
@@ -14,6 +14,8 @@ spec:
   dependsOn:
     - name: onepassword
       namespace: security
+    - name: democratic-csi-iscsi
+      namespace: storage
     - name: volsync
       namespace: storage
   interval: 1h
