--- a/kubernetes/apps/self-hosted/immich-folder-album-creator/ks.yaml
+++ b/kubernetes/apps/self-hosted/immich-folder-album-creator/ks.yaml
@@ -9,6 +9,9 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: immich
+      namespace: self-hosted
   interval: 1h
   path: ./kubernetes/apps/self-hosted/immich-folder-album-creator/app
   prune: true
