--- a/kubernetes/apps/self-hosted/immich/ks.yaml
+++ b/kubernetes/apps/self-hosted/immich/ks.yaml
@@ -18,6 +18,8 @@ spec:
       namespace: database
     - name: onepassword
       namespace: security
+    - name: democratic-csi-iscsi
+      namespace: storage
   interval: 1h
   path: ./kubernetes/apps/self-hosted/immich/app
   postBuild:
