feat(volsync): increase replicas

--- a/kubernetes/apps/storage/volsync/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/volsync/app/helmrelease.yaml
@@ -35,6 +35,7 @@ spec:
       retries: 3
   values:
     manageCRDs: true
+    replicaCount: 2
     metrics:
       disableAuth: true
     podSecurityContext:
