--- a/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
@@ -1,14 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: ingress-nginx
-  namespace: network # Required for Renovate lookups.
 spec:
   interval: 1h
-  timeout: 3m
-  url: https://kubernetes.github.io/ingress-nginx
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 4.12.0
+  url: oci://ghcr.io/onedr0p/charts-mirror/ingress-nginx
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -17,14 +22,9 @@ metadata:
   name: &app ingress-nginx-external
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: ingress-nginx
-      version: 4.12.0
-      sourceRef:
-        kind: HelmRepository
-        name: ingress-nginx
-        namespace: network
+  chartRef:
+    kind: OCIRepository
+    name: ingress-nginx
   install:
     remediation:
       retries: 3
