--- a/kubernetes/apps/flux-system/flux-instance/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/ks.yaml
@@ -10,13 +10,13 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
+    - name: flux-operator
+      namespace: *namespace
     - name: onepassword
       namespace: security
-    - name: flux-operator
-      namespace: flux-system
   interval: 1h
   path: ./kubernetes/apps/flux-system/flux-instance/app
-  prune: false # Should never be deleted.
+  prune: true
   retryInterval: 2m
   sourceRef:
     kind: GitRepository
