chore: modify dependsOn and wait in ks

--- a/kubernetes/apps/database/pgadmin/ks.yaml
+++ b/kubernetes/apps/database/pgadmin/ks.yaml
@@ -13,11 +13,11 @@ spec:
     - ../../../../components/volsync
   dependsOn:
     - name: cloudnative-pg-cluster
-      namespace: database
-    - name: onepassword
-      namespace: security
+      namespace: *namespace
     - name: democratic-csi-iscsi
       namespace: storage
+    - name: onepassword
+      namespace: security
     - name: volsync
       namespace: storage
   interval: 1h
