--- a/kubernetes/apps/system/generic-device-plugin/ks.yaml
+++ b/kubernetes/apps/system/generic-device-plugin/ks.yaml
@@ -9,6 +9,9 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: node-feature-discovery-rules
+      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/system/generic-device-plugin/app
   prune: true
