--- a/kubernetes/apps/database/postgres-backup/ks.yaml
+++ b/kubernetes/apps/database/postgres-backup/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cloudnative-pg-cluster
-      namespace: database
+      namespace: *namespace
     - name: onepassword
       namespace: security
   interval: 1h
