--- a/kubernetes/apps/security/onepassword/ks.yaml
+++ b/kubernetes/apps/security/onepassword/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets
-      namespace: security
+      namespace: *namespace
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2
       kind: HelmRelease
@@ -20,8 +20,8 @@ spec:
   healthCheckExprs:
     - apiVersion: external-secrets.io/v1beta1
       kind: ClusterSecretStore
-      failed: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'False')
       current: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'True')
+      failed: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'False')
   interval: 1h
   path: ./kubernetes/apps/security/onepassword/app
   prune: true
@@ -32,3 +32,4 @@ spec:
     namespace: flux-system
   targetNamespace: *namespace
   timeout: 15m
+  wait: false
