--- a/kubernetes/apps/self-hosted/nextcloud/ks.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/ks.yaml
@@ -14,6 +14,8 @@ spec:
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
+    - name: democratic-csi-iscsi
+      namespace: storage
     - name: dragonfly-cluster
       namespace: database
     - name: onepassword
