--- a/kubernetes/apps/storage/democratic-csi/ks.yaml
+++ b/kubernetes/apps/storage/democratic-csi/ks.yaml
@@ -13,7 +13,7 @@ spec:
     - name: onepassword
       namespace: security
     - name: snapshot-controller
-      namespace: storage
+      namespace: *namespace
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2
       kind: HelmRelease
@@ -29,7 +29,7 @@ spec:
     namespace: flux-system
   targetNamespace: *namespace
   timeout: 5m
-  wait: false
+  wait: true
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -45,7 +45,7 @@ spec:
     - name: onepassword
       namespace: security
     - name: snapshot-controller
-      namespace: storage
+      namespace: *namespace
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2
       kind: HelmRelease
@@ -61,4 +61,4 @@ spec:
     namespace: flux-system
   targetNamespace: *namespace
   timeout: 5m
-  wait: false
+  wait: true
