--- a/kubernetes/apps/system/node-feature-discovery/ks.yaml
+++ b/kubernetes/apps/system/node-feature-discovery/ks.yaml
@@ -24,6 +24,7 @@ spec:
     namespace: flux-system
   targetNamespace: *namespace
   timeout: 5m
+  wait: true
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -37,7 +38,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: node-feature-discovery
-      namespace: system
+      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/system/node-feature-discovery/rules
   prune: true
