--- a/kubernetes/apps/system/nvidia-device-plugin/ks.yaml
+++ b/kubernetes/apps/system/nvidia-device-plugin/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: node-feature-discovery
-      namespace: system
+      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/system/nvidia-device-plugin/app
   prune: true
@@ -22,4 +22,4 @@ spec:
     namespace: flux-system
   targetNamespace: *namespace
   timeout: 5m
-  wait: true
+  wait: false
