--- a/kubernetes/apps/system/system-upgrade-controller/ks.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/ks.yaml
@@ -33,7 +33,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: system-upgrade-controller
-      namespace: system
+      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/system/system-upgrade-controller/plans
   postBuild:
