--- a/kubernetes/apps/media/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/prowlarr/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
         containers:
           prowlarr:
             image:
-              repository: ghcr.io/onedr0p/prowlarr
+              repository: ghcr.io/home-operations/prowlarr
               tag: 1.32.2.4987@sha256:aa248643aa72c407d2f565c2b63831f887152aae47acb076a12b062bbbdeb61d
             env:
               TZ: ${CONFIG_TIMEZONE}
