chore(renovate): update config

--- a/.renovate/autoMerge.json5
+++ b/.renovate/autoMerge.json5
@@ -7,12 +7,12 @@
       automerge: true,
       automergeType: "branch",
       matchUpdateTypes: ["digest"],
-      matchPackageNames: ["/bjw-s/", "/onedr0p/"],
+      matchPackageNames: ["/home-operations/", "/bjw-s/", "/onedr0p/"],
       ignoreTests: true,
     },
     {
       description: "Auto-merge Helm Releases",
-      matchDatasources: ["helm", "docker"],
+      matchDatasources: ["docker"],
       automerge: true,
       automergeType: "pr",
       matchUpdateTypes: ["minor", "patch"],
