--- a/.renovate/groups.json5
+++ b/.renovate/groups.json5
@@ -13,7 +13,7 @@
     {
       description: "Actions Runner Controller Group",
       groupName: "Actions Runner Controller",
-      matchDatasources: ["docker", "helm"],
+      matchDatasources: ["docker"],
       matchPackageNames: ["/gha-runner-scale-set-controller/", "/gha-runner-scale-set/"],
       group: {
         commitMessageTopic: "{{{groupName}}} group",
