fix(cnpg): modify gatus ConfigMap

--- a/kubernetes/apps/database/cloudnative-pg/cluster/postgres17/gatus.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/postgres17/gatus.yaml
@@ -8,7 +8,7 @@ metadata:
 data:
   config.yaml: |
     endpoints:
-      - name: postgres
+      - name: postgres17
         group: infrastructure
         url: tcp://postgres17-rw.database.svc.cluster.local:5432
         interval: 1m
