--- a/kubernetes/apps/database/cloudnative-pg/cluster/postgres16/gatus.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/postgres16/gatus.yaml
@@ -8,7 +8,7 @@ metadata:
 data:
   config.yaml: |
     endpoints:
-      - name: postgres
+      - name: postgres16
         group: infrastructure
         url: tcp://postgres16-rw.database.svc.cluster.local:5432
         interval: 1m
